--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,1 +1,8 @@
-
+db.parameters=;MODE=PostgreSQL;LOCK_TIMEOUT=10000;LOCK_MODE=0
+spring.datasource.url=jdbc:h2:file:/Users/andreas/Documents/Projects/managment-system/db/managment-system${db.parameters}
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
