--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
 {
   "_version": "9",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
+    "declaration": true,
     "sourceMap": true,
     "jsx": "react-jsx",
     "inlineSources": true,
