--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "module": "esNext",
     "target": "es2020",
     "moduleResolution": "bundler",
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
